examples/test/testpolicy12492.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12492
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key26: value17
      key30: value15
      key27: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value13
          key24: value13
          key6: value35
